...
    <string name="find_headline">Find and deactivate an AirTag</string>
    <string name="title_risk_detail">Risk evaluation</string>
    <string name="show_all">Show All</string>
    <string name="tracker_detected">Tracker detected</string>
    <string name="dates_detected">Dates detected</string>
    <string name="filter">Open Filter</string>
    <string name="filter_ignored">ignored</string>
    <string name="filter_notified">identified trackers</string>
    <string name="filter_title_device_attributes">Device Attributes</string>
    <string name="filter_apply">Apply</string>
    <string name="filter_from_until_text">%1$s until %2$s</string>
    <string name="filter_date_range_picker_title">Last Seen</string>
    <string name="app_theme_dark">Dark</string>
    <string name="app_theme_light">Light</string>
...
    <string name="settings_metric_summary">Use the metric system to display distances</string>
    <string name="info_text_all_devices">This list shows all devices that have been discovered with AirGuard in the last 14 days. This includes devices that are not tracking you. Identified trackers are marked with a exclamation mark. You can filter the devices by using the button in the bottom-right corner</string>
    <string name="info_text_all_locations">This view shows all locations at which a device has been found. This does include devices, which are not tracking your location.</string>
    <string name="empty_list_devices">This list shows all devices that have been found with AirGuard in the past 14 days. Since it is empty no devices have been found. Remember to keep Bluetooth activated, because the app can only find potential tracking devices by using Bluetooth</string>
    <string name="empty_list_trackers">This list shows only devices that were tracking your location in the past 14 days. Since it is empty no device has attempted to follow you and track your location. Whenever a device is tracking your location, you will receive a notification. Remember to keep Bluetooth activated to find tracking devices. With the button below you can view all devices, even tho
    <string name="empty_list_others">There are no devices that have been identified for the selected filters. You can change filters by clicking the button in the top-left corner or by showing all devices.</string>
    <string name="show_all_button">Show all devices</string>
    <string name="empty_image_content_description">Image showing an empty list</string>
    <string name="beacon_locations">Beacon locations</string>
    <string name="other_devices_found">Other devices found</string>
    <string name="device_name_tile" translatable="false">Tile %s</string>
    <string name="device_name_pebblebee" translatable="false">Pebblebee %s</string>
    <string name="device_name_samsung_device">Samsung Device %s</string>
...
    <string name="device_name_airpods" translatable="false">AirPods %s</string>
    <string name="device_name_apple_device">Apple Device %s</string>
    <string name="device_name_unknown_device">Unknown Device %s</string>
    <string name="play_sound_error_fail">Failed to play sound! Please try again!</string>
    <string name="play_sound_error_init">Could not connect to the Bluetooth Service!</string>
    <string name="play_sound_error_connect">Failed to connect to device!</string>
    <string name="filter_title_device_types">Device Types</string>
    <string name="notification_ignore_device">IGNORE DEVICE</string>
    <string name="notification_false_alarm">FALSE ALARM</string>
    <string name="last_scans">Last scans</string>
    <string name="tip_airtag_testing"><b>Testing the app?</b> AirTags can only be discovered while they are connected to a nearby iPhone / iPad if this is enabled in the settings. Otherwise AirTags / SmartTags need to be disconnected from Bluetooth for 15min to be discovered within the app. AirGuard does not save connected trackers. </string>
    <string name="none">None</string>
    <string name="already_scanning_warning">The app is already scanning in the background. Please wait 10s and restart the manual scan</string>
...
    <string name="contact_us">Contact Us</string>

    <string name="google_find_my_default_name">Google "Find My Device"</string>
    <string name="google_find_my_tag_name">"Find My Device" Tracker</string>
    <string name="google_find_my_phone_name">Android Smartphone</string>
    <string name="apple_find_my_default_name">Apple "FindMy"</string>
    <string name="apple_device_default_name">Apple Device</string>
    <string name="airtag_default_name" translatable="false">AirTag</string>
    <string name="airpods_default_name" translatable="false">AirPods</string>
    <string name="chipolo_default_name" translatable="false">Chipolo</string>
    <string name="tile_default_name" translatable="false">Tile</string>
    <string name="pebblebee_default_name" translatable="false">Pebblebee</string>

    <string name="article_image_description">Preview Image for this article</string>
    <string name="info_button_description">Show explanation text</string>

    <string name="export_device_title">Export Device to PDF</string>
...
