<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_dashboard"
        android:contentDescription="@string/title_dashboard"
        android:icon="@drawable/ic_baseline_dashboard_24"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_manual_scan"
        android:contentDescription="@string/title_scan"
        android:icon="@drawable/ic_radar_tracking"
        android:title="@string/title_scan" />

    <item
        android:id="@+id/navigation_allDevicesFragment"
        android:contentDescription="@string/title_devices"
        android:icon="@drawable/ic_baseline_list_24"
        android:title="@string/title_devices" />

    <item
        android:id="@+id/navigation_settings"
        android:contentDescription="@string/title_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings" />

    <item
        android:id="@+id/navigation_debug"
        android:contentDescription="@string/title_debug"
        android:icon="@drawable/ic_baseline_bug_report_24"
        android:title="@string/title_debug"
        android:visible="@bool/debug" />

</menu>