...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?android:attr/colorBackground">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/devices_recycler_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:nestedScrollingEnabled="false"
            android:scrollbars="vertical"
            android:fadeScrollbars="false"
            android:scrollbarStyle="outsideOverlay"
...
